--- a/muscle-pro/src/App.css
+++ b/muscle-pro/src/App.css
@@ -2,55 +2,39 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App-header{
+  background-color: #FFC300;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-nav {
-  padding: 4vh;
-  display: flex;
-  justify-content: center;
-  text-decoration: none;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  background-color: #6E6E6E;
-}
-
-.Nav-links a{
-  text-decoration: none;
-  color: #FFC300;
-  font-size: 2rem;
-  margin-right: 2rem;
-}
-
-
-
-.App-header {
+.App-header h1{
   background-color: #282c34;
-  min-height: 100vh;
+  height: 12.5vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 4.5rem;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color: #FFC300;
+  margin-top: 1px;
+  margin-bottom: 0px;
 }
 
-.App-link {
-  color: #61dafb;
+h4 {
+  margin: 0px;
+  background-color: #282c34;
+  font-size: 2rem;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color: #FFC300;
+  border-bottom: 4px solid #FFC300;
+  padding-bottom: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.banner-image {
+  width: 100%;
+  height: 45vh;
+  margin-bottom: 0px;
 }
+
+
+
