--- a/muscle-pro/src/App.css
+++ b/muscle-pro/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: orangered;
+  background-color: #d9d7d6;
 }
 
 .App {
@@ -45,14 +45,3 @@ h4 {
   text-decoration: none;
 }
 
-.navLinks {
-  color: black;
-  text-decoration: none;
-  display: flex;
-  flex-direction: column;
-}
-
-.linkTwo {
-  color: white;
-  text-decoration: none;
-}
